<resources>
    <string name="app_name">NEWS ALARM</string>
    <string name="monday">Monday</string>
    <string name="every_day">Everyday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="title_activity_news">NewsActivity</string>

    <string-array name="lang">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>

        <item>Germain</item>
        <item>Chinese</item>
        <item>Japanese</item>


    </string-array>
    <string-array name="info">
        <item>General</item>
        <item>Sports</item>
        <item>Entertainment</item>

        <item>Business</item>
        <item>Sciences</item>
        <item>Tech</item>


    </string-array>
</resources>
